# proportionate-selector

./: Cargo.toml  LICENCE  Readme.md
.github/workflows/: build.yml
benches/: benchmark.rs
src/: errors.rs  lib.rs  util.rs
