[package]
name = "proportionate_selector"
description = "Selecting useful solutions for recombination via fitness proportionate selection"
version = "0.1.2"
authors = ["Megh <meghss@protonmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["random", "statistics"]
include = ["/src", "LICENCE"]
readme = "Readme.md"
repository = "https://github.com/mksuthar/proportionate-selector"


[dependencies]
rand = {version = "0.8.5", features=["small_rng"]}
anyhow = "1.0.64"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
kolmogorov_smirnov = "1.1.0"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false
